<resources>
    <string name="app_name">trading-company-client</string>
    <string name="trading_company">Торгово-промышленное предприятие</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="auth">Авторизоваться</string>
    <string name="search">Поиск</string>
    <string name="delete">Удалить</string>
    <string name="update">Изменить</string>
    <string name="add">Добавить</string>
    <string name="add_client">Добавление клиента</string>
    <string name="please_fill_all_fields_correctly">Пожалуйста, заполните все поля корректно</string>
    <string name="cancel">Отмена</string>
    <string name="add_item">Добавление товара</string>
    <string name="add_order">Добавление заказа</string>
    <string name="add_purchase">Добавление заявки на покупку</string>
    <string name="add_employee">Добавление сотрудника</string>
    <string name="delete_client">Удаление клиента</string>
    <string name="delete_employee">Удаление сотрудника</string>
    <string name="delete_item">Удаление товара</string>
    <string name="delete_order">Удаление заказа</string>
    <string name="delete_purchase">Удаление заявки</string>
    <string name="please_enter_client_id_correctly">Пожалуйста, введите корректный ID клиента</string>
    <string name="please_enter_employee_id_correctly">Пожалуйста, введите корректный ID сотрудника</string>
    <string name="please_enter_item_id_correctly">Пожалуйста, введите корректный ID товара</string>
    <string name="please_enter_order_id_correctly">Пожалуйста, введите корректный ID заказа</string>
    <string name="please_enter_purchase_id_correctly">Пожалуйста, введите корректный ID заявки</string>
    <string name="please_enter_name_and_lastname">Пожалуйста, введите имя и фамилию</string>
    <string name="please_enter_item_name">Пожалуйста, введите название товара</string>
    <string name="search_client">Поиск клиента</string>
    <string name="search_employee">Поиск сотрудника</string>
    <string name="search_item">Поиск товара</string>
    <string name="search_order">Поиск заказа</string>
    <string name="search_purchase">Поиск закупки</string>
    <string name="error_while_searching_for_purhcase">Ошибка при поиске заявки</string>
    <string name="update_information_about_client">Обновление информации о клиенте</string>
    <string name="update_information_about_employee">Обновление информации о работнике</string>
    <string name="update_information_about_item">Обновление информации о товаре</string>
    <string name="update_information_about_order">Обновление информации о заказе</string>
    <string name="update_information_about_purchase">Обновление информации о закупке</string>
</resources>